--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlinVersion"
 
     implementation "com.google.code.gson:gson:2.8.0"
+    implementation "com.squareup.picasso:picasso:2.5.2"
 
     testImplementation 'junit:junit:4.12'
 
